<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/background">


    <TextView
        android:id="@+id/login_page_title"
        style="@style/login_signup_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="@+id/login_back_button"
        app:layout_constraintStart_toEndOf="@+id/login_back_button"
        app:layout_constraintTop_toTopOf="@+id/login_back_button" />

    <ImageView
        android:id="@+id/login_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/login_light_mode_button"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/dark_light_mode"
        app:layout_constraintBottom_toBottomOf="@+id/login_page_title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/login_page_title"
        />



    <TextView
        android:id="@+id/login_description"
        style="@style/login_signup_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/login_description"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/login_back_button"
        app:layout_constraintTop_toBottomOf="@+id/login_page_title" />

    <ImageView
        android:id="@+id/login_with_google_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_with_google_button"
        app:layout_constraintStart_toStartOf="@+id/login_description"
        app:layout_constraintTop_toBottomOf="@+id/login_description"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/login_with_facebook_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:src="@drawable/ic_with_facebook"
        app:layout_constraintBottom_toBottomOf="@+id/login_with_google_button"
        app:layout_constraintStart_toEndOf="@+id/login_with_google_button"
        app:layout_constraintTop_toTopOf="@+id/login_with_google_button"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/login_email_field"
        style="@style/register_input_field"
        android:layout_marginTop="32dp"
        android:hint="@string/sign_up_email_input_hint"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_with_google_button" />


    <EditText
        android:id="@+id/login_password_field"
        style="@style/register_input_field"
        android:layout_marginTop="12dp"
        android:hint="@string/sign_up_password_input_hint"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/login_email_field"
        app:layout_constraintStart_toStartOf="@+id/login_email_field"
        app:layout_constraintTop_toBottomOf="@+id/login_email_field" />

    <Button
        android:id="@+id/login_button"
        style="@style/sign_up_login_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:text="@string/login"
        app:backgroundTint="@color/cream_700"
        app:layout_constraintBottom_toTopOf="@+id/login_sign_up_button"
        app:layout_constraintEnd_toEndOf="@+id/login_password_field"
        app:layout_constraintStart_toStartOf="@+id/login_password_field" />

    <TextView
        android:id="@+id/login_dont_have_account"
        style="@style/have_account_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/sign_up_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/login_sign_up_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/login_sign_up_button"
        style="@style/signup_login_redirect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="@+id/login_dont_have_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/login_dont_have_account"
        app:layout_constraintTop_toTopOf="@+id/login_dont_have_account" />

</androidx.constraintlayout.widget.ConstraintLayout>